# src/models/schemas/Category.schema.ts
@@ -4,6 +4,7 @@ export interface CategoryType {
   _id?: ObjectId;
   name_vi: string;
   name_en: string;
+  user_id: ObjectId;
   created_at?: Date;
   updated_at?: Date;
 }
@@ -12,17 +13,18 @@ class Category {
   _id?: ObjectId;
   name_vi: string;
   name_en: string;
+  user_id: ObjectId;
   created_at: Date;
   updated_at: Date;
 
-  constructor(category: CategoryType) {
+  constructor({ _id, name_vi, name_en, user_id, created_at, updated_at }: CategoryType) {
     const date = new Date();
-
-    this._id = category._id;
-    this.name_vi = category.name_vi;
-    this.name_en = category.name_en;
-    this.created_at = category.created_at || date;
-    this.updated_at = category.updated_at || date;
+    this._id = _id;
+    this.name_vi = name_vi;
+    this.name_en = name_en;
+    this.user_id = user_id;
+    this.created_at = created_at || date;
+    this.updated_at = updated_at || date;
   }
 }
 
